# product_api

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  init-data.json  manage.py  pyproject.toml
op_products/: asgi.py  settings.py  urls.py  wsgi.py
product_api/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
product_api/migrations/: 0001_initial.py
